--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "12",
     "next-images": "^1.8.1",
